appId: br.com.leaf.ride
---
- launchApp
- runFlow:
    when:
      visible: "This is the developer menu"
    commands:
      - tapOn: "Continue"
- tapOn: "Número"
- eraseText
- inputText: "21102938475"
- pressKey: Enter
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: ".*"
    timeout: 10000
- takeScreenshot: "debug-customer-after-enter"
