appId: br.com.leaf.ride
---
- launchApp
- tapOn:
    point: "50%,61%"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Verificação"
    commands:
      - inputText: "992111"
- runFlow:
    when:
      visible: "Verificar"
    commands:
      - tapOn: "Verificar"
- waitForAnimationToEnd
- takeScreenshot: "debug-review-passenger-post-continue"
